name:          template
category:      API
version:       0.1
cabal-version: >= 1.18
build-type:    Simple

license:       BSD3
license-file:  LICENSE.md
author:        Kai Wang
maintainer:    Kai Wang <kai@foldr.ca>
stability:     experimental
copyright:     Copyright (C) 2014 Kai Wang

extra-source-files:
    .ghci
    .gitignore
    CHANGELOG.md
    README.md

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    ghc-options: -Wall -O2 -fno-warn-unused-binds

    exposed-modules:
          Template

    build-depends:
          base               >= 4.4    && < 5
        , transformers       >= 0.3.0  && < 0.3.1
        , time               >= 1.4.0  && < 1.5
        , text               >= 1.0.0  && < 1.2.0
        , bytestring         >= 0.10.4 && < 0.11
        , attoparsec         >= 0.11.2 && < 0.12
        , async              >= 2.0.1  && < 2.0.2
        , old-locale         >= 1.0.0

executable cli
    hs-source-dirs: src
    default-language: Haskell2010
    main-is: main.hs
    ghc-options: -Wall -O2

    build-depends:
          base               >= 4.4    && < 5
        , options            >= 1.0    && < 1.1
        , template

test-suite testsuite
    hs-source-dirs: tests
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: test.hs
    ghc-options: -Wall -O2
    build-depends:
          base               >= 4.4     && < 5
        , tasty              >= 0.8     && < 0.9
        , template

benchmark bench
    hs-source-dirs: benchmarks
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: bench.hs
    ghc-options: -Wall -O2

    build-depends:
          base               >= 4.4     && < 5
        , criterion          >= 0.8     && < 0.9
        , template

source-repository head
    type:     git
    location: git://github.com/accelas/template.git
